--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "helmet": "^7.0.1",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
